--- a/themes/hugo-theme-stack/assets/scss/variables.scss
+++ b/themes/hugo-theme-stack/assets/scss/variables.scss
@@ -25,13 +25,13 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 
     --section-separation: 40px;
 
-    @media (prefers-color-scheme: dark) {
-        --body-background: #303030;
-        --accent-color: #ecf0f1;
-        --accent-color-darker: #bdc3c7;
-        --accent-color-text: #000;
-        --body-text-color: rgba(255, 255, 255, 0.7);
-    }
+    // @media (prefers-color-scheme: dark) {
+    //     --body-background: #303030;
+    //     --accent-color: #ecf0f1;
+    //     --accent-color-darker: #bdc3c7;
+    //     --accent-color-text: #000;
+    //     --body-text-color: rgba(255, 255, 255, 0.7);
+    // }
 }
 
 /**
@@ -72,14 +72,14 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
         --small-card-padding: 25px 20px;
     }
 
-    @media (prefers-color-scheme: dark) {
-        --card-background: #424242;
-        --card-background-selected: rgba(255, 255, 255, 0.16);
-        --card-text-color-main: rgba(255, 255, 255, 0.9);
-        --card-text-color-secondary: rgba(255, 255, 255, 0.7);
-        --card-text-color-tertiary: rgba(255, 255, 255, 0.5);
-        --card-separator-color: rgba(255, 255, 255, 0.12);
-    }
+    // @media (prefers-color-scheme: dark) {
+    //     --card-background: #424242;
+    //     --card-background-selected: rgba(255, 255, 255, 0.16);
+    //     --card-text-color-main: rgba(255, 255, 255, 0.9);
+    //     --card-text-color-secondary: rgba(255, 255, 255, 0.7);
+    //     --card-text-color-tertiary: rgba(255, 255, 255, 0.5);
+    //     --card-separator-color: rgba(255, 255, 255, 0.12);
+    // }
 }
 
 /**
@@ -116,15 +116,15 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
     --table-border-color: #dadada;
     --tr-even-background-color: #efefee;
 
-    @media (prefers-color-scheme: dark) {
-        --code-background-color: #272822;
-        --code-text-color: rgba(255, 255, 255, 0.9);
+    // @media (prefers-color-scheme: dark) {
+    //     --code-background-color: #272822;
+    //     --code-text-color: rgba(255, 255, 255, 0.9);
 
-        --table-border-color: #717171;
-        --tr-even-background-color: #545454;
+    //     --table-border-color: #717171;
+    //     --tr-even-background-color: #545454;
 
-        --blockquote-background-color: rgb(75 75 75);
-    }
+    //     --blockquote-background-color: rgb(75 75 75);
+    // }
 }
 
 /*
